--- a/radek556.pl/mplayer/style.css
+++ b/radek556.pl/mplayer/style.css
@@ -9,6 +9,13 @@ body{
 	display: grid;
 	place-items: center;
 	min-height: 100vh;
+	  background-image: url("https://i.makeagif.com/media/7-29-2017/6S07LZ.gif");
+
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .button-53 {
   background-color: #3DD1E7;
